fix username ellipsis on firefox

--- a/packages/rocketchat-theme/client/imports/components/sidebar/sidebar-account.css
+++ b/packages/rocketchat-theme/client/imports/components/sidebar/sidebar-account.css
@@ -38,7 +38,6 @@
 		overflow: hidden;
 		flex: 1;
 
-		max-width: 160px;
 		max-width: fit-content;
 		height: calc(var(--sidebar-account-username-size) + 0.1rem);
 		margin-bottom: 0.5rem;
